k8s/overlays/dev/patch-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: fastapi-ingress

spec:
  tls:
    - hosts:
        - fastapi.dev.local
      secretName: fastapi-tls-secret
